@@ -2,10 +2,11 @@
 [manpage_begin ldap n 1.2]
 [copyright {2004 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [copyright {2004 Jochen Loewer <loewerj@web.de>}]
+[copyright {2006 Michael Schlenker <mic42@users.sourceforge.net>}]
 [moddesc   {LDAP client}]
 [titledesc {LDAP client}]
 [require Tcl 8.2]
-[require ldap [opt 1.2]]
+[require ldap [opt 1.3]]
 [description]
 [para]
 
@@ -173,6 +174,23 @@ operation will create a copy of [arg dn] in the new location.
 The command blocks until the operation has completed. Its result
 is the empty string.
 
+[call [cmd ::ldap::info] [cmd ip] [arg handle]]
+
+This command returns the IP address of the remote LDAP server the handle is connected to.
+
+[call [cmd ::ldap::info] [cmd bound] [arg handle]]
+
+This command returns 1 if a handle has successfully completed a [cmd ::ldap::bind], 
+if no bound was done or it failed.
+
+[call [cmd ::ldap::info] [cmd connections] ]
+
+This command returns all currently existing ldap connection handles.
+
+[call [cmd ::ldap::info] [cmd tls] [arg handle] ]
+
+This command returns 1 if the ldap connection [arg handle] used TLS/SSL for
+connection via [cmd ldap::secure_connect], 0 otherwise. 
 
 [list_end]
 [para]
