@@ -1,3 +1,9 @@
+2006-06-13  Michael Schlenker <mic42@users.sourceforge.net>
+
+        * ldap.tcl    : Added ldap::info command for introspection.
+	* ldap.man    : Added documentation.
+	* ldap.test   : Testsuite for the new info command.
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
